--- a/src/notes/vue/组件通信方式.md
+++ b/src/notes/vue/组件通信方式.md
@@ -14,8 +14,8 @@ tag:
 
 ## 方式一: provide 和 inject
 
-> 用于多层传值，provide 在父组件中使用，inject 在后代中使用。
-> 无论组件层次结构有多深，父组件都可以作为其所有子组件的依赖提供者。
+> 用于多层传值，provide 在父组件中使用，inject 在后代中使用。无论组件层次结构有多深，父组件都可以作为其所有子组件的依赖
+> 提供者。
 
 ```vue
 <template>
@@ -41,6 +41,7 @@ provide("changeName", (value) => {
 });
 </script>
 ```
+
 ````
 
 ```vue
@@ -420,3 +421,4 @@ const changeBusMsg = () => {
 > Vue 官方推荐的全局状态管理方案
 
 希望这有助于您将文档内容转换为漂亮的 Markdown 格式！如果您需要更多帮助或有其他问题，请随时提问。
+````
