--- a/src/web/interview/02.md
+++ b/src/web/interview/02.md
@@ -1,3 +1,16 @@
+---
+title: 面经
+shortTitle: 面经
+icon: fab fa-markdown
+order: 1
+isOriginal: false
+date: 2023-03-06
+category:
+  - 面经
+tag:
+  - 面经
+---
+
 ## 前言
 
 以前我在掘金上看到面试贴就直接刷掉的，从不会多看一眼，直到去年 9 月份我开始准备面试时，才发现很多面试经验贴特别有用，看这些帖子（我不敢称之为文章，怕被杠）的过程中对我的复习思维形成影响很大，所以我现在把之前自己好好整理的面试计划分享出来，希望能帮到接下来要找工作的朋友，不喜勿喷哈～
