✨ feat(添加一篇笔记):添加一篇

--- a/src/web/面经/03.md
+++ b/src/web/面经/03.md
@@ -1,3 +1,16 @@
+---
+title: 08-07 面经
+shortTitle: 面经
+icon: fab fa-markdown
+order: 1
+isOriginal: false
+date: 2024-08-07
+category:
+  - 面经
+tag:
+  - 面经
+---
+
 ### JavaScript 数据类型
 
 #### 原始数据类型
@@ -137,4 +150,126 @@ counter = null; // 释放闭包
     </style>
   </body>
 </html>
+```
+
+
+在 Vue 中，自定义指令允许你在 DOM 元素上应用特殊行为。Vue 2 和 Vue 3 的自定义指令有些细微差别。以下是两者的基本用法：
+
+### Vue 2
+
+在 Vue 2 中，自定义指令使用 `Vue.directive` 方法来注册。指令对象包含多个钩子函数，如 `bind`、`inserted`、`update` 和 `unbind`。
+
+```javascript
+// 全局注册
+Vue.directive('focus', {
+  // 当绑定元素插入到 DOM 中。
+  inserted: function (el) {
+    // 聚焦元素
+    el.focus();
+  }
+});
+
+// 局部注册
+new Vue({
+  el: '#app',
+  directives: {
+    focus: {
+      inserted: function (el) {
+        el.focus();
+      }
+    }
+  }
+});
+```
+
+使用自定义指令：
+
+```html
+<input v-focus>
+```
+
+### Vue 3
+
+在 Vue 3 中，自定义指令的注册方式有所变化。我们使用 `app.directive` 方法来注册指令。
+
+```javascript
+import { createApp } from 'vue';
+
+const app = createApp({});
+
+// 全局注册
+app.directive('focus', {
+  mounted(el) {
+    el.focus();
+  }
+});
+
+// 局部注册
+const MyComponent = {
+  template: '<input v-focus>',
+  directives: {
+    focus: {
+      mounted(el) {
+        el.focus();
+      }
+    }
+  }
+};
+
+app.mount('#app');
+```
+
+使用自定义指令：
+
+```html
+<input v-focus>
+```
+
+### 钩子函数
+
+在 Vue 2 和 Vue 3 中，自定义指令可以定义以下钩子函数：
+
+- **bind** (Vue 2) / **created** (Vue 3): 只调用一次，指令第一次绑定到元素时调用。在这里可以进行一次性的初始化设置。
+- **inserted** (Vue 2) / **mounted** (Vue 3): 被绑定元素插入父节点时调用。
+- **update** (Vue 2) / **updated** (Vue 3): 所在组件的 VNode 更新时调用。
+- **unbind** (Vue 2) / **beforeUnmount** (Vue 3): 只调用一次，指令与元素解绑时调用。
+- **componentUpdated** (Vue 2) / **unmounted** (Vue 3): 指令所在组件的 VNode 及其子 VNode 全部更新后调用。
+
+例子：
+
+```javascript
+// Vue 2
+Vue.directive('example', {
+  bind(el, binding, vnode) {
+    // 初始化
+  },
+  inserted(el, binding, vnode) {
+    // 元素插入 DOM
+  },
+  update(el, binding, vnode, oldVnode) {
+    // VNode 更新
+  },
+  unbind(el, binding, vnode) {
+    // 元素解绑
+  }
+});
+
+// Vue 3
+app.directive('example', {
+  created(el, binding, vnode, prevVnode) {
+    // 初始化
+  },
+  mounted(el, binding, vnode, prevVnode) {
+    // 元素插入 DOM
+  },
+  updated(el, binding, vnode, prevVnode) {
+    // VNode 更新
+  },
+  beforeUnmount(el, binding, vnode, prevVnode) {
+    // 元素解绑
+  },
+  unmounted(el, binding, vnode, prevVnode) {
+    // 组件卸载后
+  }
+});
 ```
