✨ feat(笔记): 更新ES笔记保证准备性

--- a/src/web/JavaScript/es11.md
+++ b/src/web/JavaScript/es11.md
@@ -1,84 +1,108 @@
 ---
-title: es11新增内容
-shortTitle: es11
+title: ES11新增内容
+shortTitle: ES11
 icon: fab fa-markdown
 isOriginal: false
 date: 2023-08-29
 order: -1
 category:
-  - javascript
+  - JavaScript
 tag:
-  - es11
-  - javascript
+  - ES11
+  - JavaScript
 ---
-
-
-当然，请看以下是ES11（ECMAScript 2020）的一些新特性的Markdown格式整理：
 
 ## ES11（ECMAScript 2020）新特性
 
-1. **`String.prototype.matchAll()` 方法**
+### 1. `String.prototype.matchAll()` 方法
 
-   允许在字符串上使用正则表达式的全局匹配，并返回一个迭代器，用于访问所有匹配结果。
+- 允许在字符串上使用正则表达式的全局匹配，并返回一个迭代器，用于访问所有匹配结果。
 
-   示例：
-   ```javascript
-   const regex = /(\d+)/g;
-   const str = '2020年和2021年';
-   const matches = [...str.matchAll(regex)];
-   // matches: [['2020'], ['2021']]
-   ```
+**示例**:
 
-2. **可选链操作符（Optional Chaining Operator）**
+```javascript
+const regex = /(\d+)/g;
+const str = '2020年和2021年';
+const matches = [...str.matchAll(regex)];
+// matches: [['2020'], ['2021']]
+```
 
-   允许在访问可能为`null`或`undefined`的属性或方法时避免产生错误，直接返回`undefined`。
+### 2. 可选链操作符（Optional Chaining Operator）
 
-   示例：
-   ```javascript
-   const person = {
-       name: 'Alice',
-       address: {
-           city: 'Wonderland'
-       }
-   };
-   
-   const city = person?.address?.city;
-   // city: 'Wonderland'
-   ```
+- 允许在访问可能为 `null` 或 `undefined` 的属性或方法时避免产生错误，直接返回 `undefined`。
 
-3. **Nullish 合并操作符（Nullish Coalescing Operator）**
+**示例**:
 
-   允许在对可能为`null`或`undefined`的变量进行赋值时，仅在变量的值为`null`或`undefined`时使用默认值。
+```javascript
+const person = {
+  name: 'Alice',
+  address: {
+    city: 'Wonderland'
+  }
+};
 
-   示例：
-   ```javascript
-   const defaultValue = 'Default Value';
-   const userInput = null;
-   const value = userInput ?? defaultValue;
-   // value: 'Default Value'
-   ```
+const city = person?.address?.city;
+// city: 'Wonderland'
 
-4. **`Promise.allSettled()` 方法**
+// 在数组上的使用
+const arr = [1, 5, 6, 8];
+console.log(arr?.[1]); // 5
+```
 
-   允许在所有的Promise完成或拒绝后，返回一个包含每个Promise结果状态的数组，不会抛出异常。
+### 3. Nullish 合并操作符（Nullish Coalescing Operator）
 
-   示例：
-   ```javascript
-   const promises = [
-       Promise.resolve('Resolved'),
-       Promise.reject('Rejected')
-   ];
-   
-   Promise.allSettled(promises)
-       .then(results => console.log(results))
-       .catch(error => console.error(error));
-   ```
+- 允许在对可能为 `null` 或 `undefined` 的变量进行赋值时，仅在变量的值为 `null` 或 `undefined` 时使用默认值。
 
-5. **`globalThis` 对象**
+**示例**:
 
-   提供了一个标准的方式来获取全局对象，不依赖于当前执行环境。
+```javascript
+const defaultValue = 'Default Value';
+const userInput = null;
+const value = userInput ?? defaultValue;
+// value: 'Default Value'
 
-   示例：
-   ```javascript
-   console.log(globalThis === window); // 在浏览器环境中输出: true
-   ```
+console.log(false ?? true); // false
+// 只要不是 null 和 undefined，都是左侧的值
+```
+
+### 4. `Promise.allSettled()` 方法
+
+- 允许在所有的 Promise 完成或拒绝后，返回一个包含每个 Promise 结果状态的数组，不会抛出异常。
+
+**示例**:
+
+```javascript
+const promises = [
+  Promise.resolve('Resolved'),
+  Promise.reject('Rejected')
+];
+
+Promise.allSettled(promises)
+  .then(results => console.log(results))
+  .catch(error => console.error(error));
+```
+
+### 5. `globalThis` 对象
+
+- 提供了一个标准的方式来获取全局对象，不依赖于当前执行环境。
+
+**示例**:
+
+```javascript
+console.log(globalThis === window); // 在浏览器环境中输出: true
+console.log(global === globalThis); // 在 Node.js 环境中输出: true
+```
+
+### 6. for-in 机制
+
+- ECMA-262 规范没有规定 `for (a in b) ...` 的遍历顺序，部分原因是所有引擎都有自己特殊的实现。现在很难就 `for-in` 完整顺序规范达成一致，但规范了一些供参考的实现行为。因此，在不同的引擎下，`for-in` 循环出来的内容顺序可能是不一样的。
+
+**示例**:
+
+```javascript
+const obj = { a: 1, b: 2, c: 3 };
+for (const key in obj) {
+  console.log(key);
+}
+// 输出顺序可能因环境而异
+```
