--- a/src/web/JavaScript/es12.md
+++ b/src/web/JavaScript/es12.md
@@ -1,88 +1,102 @@
 ---
-title: es12新增内容
-shortTitle: es12
+title: ES12新增内容
+shortTitle: ES12
 icon: fab fa-markdown
 isOriginal: false
 date: 2023-08-29
-order: -1
+order: 6
 category:
-  - javascript
+  - JavaScript
 tag:
-  - es12
-  - javascript
+  - ES12
+  - JavaScript
 ---
 
-当然，请看以下是 ES12（ECMAScript 2021）的一些新特性的 Markdown 格式整理：
+# ES12（ECMAScript 2021）新特性
 
-## ES12（ECMAScript 2021）新特性
+## 1. `String.prototype.replaceAll()` 方法
 
-1. **`String.prototype.replaceAll()` 方法**
+允许在字符串中替换所有匹配的子字符串。之前的 `replace()` 只会匹配一个。
 
-   允许在字符串中替换所有匹配的子字符串。
+**示例**:
 
-   示例：
+```javascript
+const originalString = "apple orange apple banana apple";
+const newString = originalString.replaceAll("apple", "fruit");
+// newString: 'fruit orange fruit banana fruit'
+```
 
-   ```javascript
-   const originalString = "apple orange apple banana apple";
-   const newString = originalString.replaceAll("apple", "fruit");
-   // newString: 'fruit orange fruit banana fruit'
-   ```
+## 2. `Promise.any()` 方法
 
-2. **`Promise.any()` 方法**
+允许在一组 Promise 中，只要有一个 Fulfilled 状态，就返回该 Promise 的结果。如果全部拒绝，则抛出 `AggregateError` 异常。
 
-   允许在一组 Promise 中，只要有一个 Fulfilled 状态，就返回该 Promise 的结果。如果全部拒绝，则抛出`AggregateError`异常。
+**示例**:
 
-   示例：
+```javascript
+const delay = (value, ms) => new Promise((resolve) => setTimeout(() => resolve(value), ms));
+const promises = [
+  delay('a', 3000),
+  delay('b', 2000),
+  delay('c', 4000)
+];
 
-   ```javascript
-   const promises = [
-     Promise.reject("Rejected 1"),
-     Promise.resolve("Resolved"),
-     Promise.reject("Rejected 2"),
-   ];
+Promise.any(promises)
+  .then(res => console.log(res)) // b
+  .catch(err => console.error(err.name, err.message, err.errors)); // 全部失败时返回：AggregateError All promises were rejected [ 'a', 'b', 'c' ]
+```
 
-   Promise.any(promises)
-     .then((result) => console.log(result))
-     .catch((errors) => console.error(errors));
-   ```
+## 3. 逻辑赋值操作符（Logical Assignment Operators）
 
-3. **逻辑赋值操作符（Logical Assignment Operators）**
+引入了 `||=`, `&&=` 和 `??=` 这三个逻辑运算符与赋值操作符的组合。
 
-   引入了 `||=` 和 `&&=` 这两个逻辑运算符与赋值操作符的组合。
+**示例**:
 
-   示例：
+```javascript
+let a;
 
-   ```javascript
-   let x = 5;
-   x ||= 10; // 相当于 x = x || 10;
-   // x: 5
+a ||= 'default'; // 如果 a 是 falsy，则 a = 'default'
+// 等效于
+// a || (a = 'default');
+// 或者
+// if (!a) a = 'default';
 
-   let y = 0;
-   y &&= 20; // 相当于 y = y && 20;
-   // y: 0
-   ```
+a &&= 'override'; // 如果 a 是 truthy，则 a = 'override'
+// 等效于
+// a && (a = 'override');
+// 或者
+// if (a) a = 'override';
 
-4. **`Object.hasOwn()` 方法**
+a ??= 'fallback'; // 如果 a 是 null 或 undefined，则 a = 'fallback'
+// 等效于
+// a ?? (a = 'fallback');
+// 或者
+// if (a === undefined || a === null) a = 'fallback';
+```
 
-   用于判断对象是否有指定的属性，不受继承属性的影响。
+## 4. 数字分隔符 `_`
 
-   示例：
+用于提高数字可读性，不改变数值本身。
 
-   ```javascript
-   const person = { name: "Alice" };
-   console.log(Object.hasOwn(person, "name")); // 输出: true
-   console.log(Object.hasOwn(person, "age")); // 输出: false
-   ```
+**示例**:
 
-5. **`BigInt` 类型扩展**
+```javascript
+const budget = 1_000_000_000_000;
+console.log(budget === 10 ** 12); // true
+```
 
-   允许使用 `BigInt` 进行构造函数调用和运算。
+## 5. `WeakRef` 对象
 
-   示例：
+`WeakRef` 对象包含对对象的弱引用，这个弱引用被称为该 `WeakRef` 对象的 target 或 referent。当目标对象没有其他强引用时，垃圾回收器可以安全地回收它。
 
-   ```javascript
-   const bigIntValue = BigInt(1234567890123456789012345678901234567890);
-   const added = bigIntValue + BigInt(10);
-   ```
+**创建和使用 `WeakRef` 示例**:
 
-以上是 ES12（ECMAScript 2021）引入的一些新特性的 Markdown 格式整理。请注意，不同的浏览器和 JavaScript 引擎对这些特性的支持可能会有所不同。
+```javascript
+const obj = { a: 1 };
+const ref = new WeakRef(obj);
+
+console.log(ref.deref()); // { a: 1 }
+
+// 如果 obj 被垃圾回收，ref.deref() 将返回 undefined
+```
+
+`WeakRef.prototype.deref()` 返回当前实例的 `WeakRef` 对象所绑定的目标对象，如果该目标对象已被垃圾回收则返回 `undefined`。
