build(dependencies): 更新项目依赖版本
- 更新 @types/node 到 22.10.5
- 移除 @vuepress/client
- 更新 @vuepress/plugin-register-components 到 2.0.0-rc.66
- 更新 vue 到 3.5.13
- 更新 vuepress 到 2.0.0-rc.19
- 更新 vuepress-theme-hope 到 2.0.0-rc.67
- 添加 @vuepress/bundler-vite 2.0.0-rc.7
- 更新 rimraf 到 5.0.10
- 更新 vuepress-plugin-search-pro 到 2.0.0-rc.59

--- a/src/web/面经/04.md
+++ b/src/web/面经/04.md
@@ -1,14 +1,14 @@
 ---
-title: 面试结果
-shortTitle: 面试结果
+title: 初次作为面试官,准备的面试题(二)
+shortTitle: 初次作为面试官,准备的面试题(二)
 icon: fab fa-markdown
-order: 1
+order: 2
 isOriginal: false
 date: 2024-10-15
 category:
-  - 面试结果
+  - 面试题
 tag:
-  - 面试结果
+  - 面试题
 ---
 
 第一个面试题
