✨ feat(萤石云):添加萤石云监控对接

--- a/src/web/project/海康威视摄像头对接.md
+++ b/src/web/project/海康威视摄像头对接.md
@@ -41,8 +41,8 @@ export default {
     initPlayer() {
       this.player = new EZUIKit.EZUIKitPlayer({
         id: 'video-container', // 视频容器ID
-        accessToken: '********',
-        url: '********',
+        accessToken: 'at.bgzqqs7p1gky5crv98mak9z37ravtpay-99tgbid6eb-1ddkfmr-ymyxl39lx',
+        url: 'ezopen://open.ys7.com/FB9857503/1.hd.live',
         template: 'standard',
         header: ['capturePicture', 'save', 'zoom'],
         footer: ['talk', 'broadcast', 'hd', 'fullScreen'],
